@@ -4,6 +4,7 @@ fsarchiver: Filesystem Archiver for Linux [http://www.fsarchiver.org]
   - Added support for sparse files (sparse file on the original disk will be recreated as sparse file)
   - Added per-archive minimum fsarchiver version requirement (MAINHEADKEY_MINFSAVERSION)
   - Added dirsinfo in archives with simple files and directories to store stats required for progression
+  - The logfile created when option -d is used now has a specific name so that it's not overwritten
 * 0.6.6 (2010-01-24):
   - Fix: don't remove the archive file when savefs/savedir fails because the archive already exists
   - Partitions already mounted are remounted with MS_BIND to have access to files hidden by mounted filesystems 
